feat: detail return system fields
--story=1019470 --user=王旭 线索、线索池、客户、公海、商机详情增加系统字段展示 https://www.tapd.cn/34675357/s/1765739